# process-lasso-linux-rs

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
src/: app.rs  config.rs  cpu_park.rs  file_dialog.rs  hw_monitor.rs  icon.rs  main.rs  mem_bench.rs  monitor.rs  probalance.rs  rules.rs  utils.rs  wayland_opacity.rs
src/gui/: bench_tab.rs  cpu_bars.rs  dialogs.rs  gaming_mode_tab.rs  hw_monitor_tab.rs  log_tab.rs  mod.rs  overview_tab.rs  probalance_tab.rs  process_tab.rs  rules_tab.rs  settings_tab.rs  theme.rs
